# parts_of_speech_analyzer

./: Procfile  README.md  pyproject.toml  requirements.txt
nlp/: apps.py  errors.py  models.py  urls.py  utils.py
nlp/migrations/: 0001_initial.py
parts_of_speech_analyzer/: asgi.py  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
parts_of_speech_analyzer/nlp/: forms.py  models.py  validators.py  views.py
parts_of_speech_analyzer/nlp/migrations/: 0001_initial.py
parts_of_speech_analyzer/parts_of_speech_analyzer/: middleware.py  settings.py
parts_of_speech_analyzer/templates/: base.html
templates/nlp/: analyze_text.html  words.html
