[tool.poetry]
name = "parts_of_speech_analyzer"
version = "0.1.0"
description = "A web application analyzing english text for parts of speech."
authors = ["Oleksandr Baltian <obaltian@icloud.com>"]
license = "GPLv3.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
spacy = "^3.1.3"
googletrans = "4.0.0-rc1"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
